Fix "Userlist is very squished on small screens" (https://trello.com/c/8JlQ0OaQ/71-userlist-is-very-squished-on-small-screens)

--- a/styles/main.css
+++ b/styles/main.css
@@ -283,7 +283,7 @@ header {
     border-radius: 3px;
     float: right;
     height: 90%;
-    height: calc(100% - 35px);
+    height: calc(100% - 34px);
     margin-left: 4px;
     width: 10%;
     word-wrap: break-word;
@@ -518,6 +518,17 @@ span.link {
 
 .inline-image-container {
     cursor: pointer;
+}
+
+@media (max-width: 1100px) {
+    .userlist {
+        width: 100px;
+    }
+
+    .chat-input {
+        width: 85%;
+        width: calc(100% - 100px - 4px);
+    }
 }
 
 /*From bootstrap.css*/
